--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
 
   </head>
   <body>
-    <div id="authorize-div">
+    <div class='container' id="authorize-div">
       <a class="waves-effect waves-light btn-large" style="" id="authorize-button" onclick="handleAuthClick(event)">
         Sign in to Sheets
       </a>
     </div>
-    <div id='root'>
+    <div class='container' id='root'>
     </div>
   </body>
 </html>
