added logo and some styling

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
     <!-- Read in Babel Script -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.14.0/babel.min.js"></script>
 
+    <!-- External Stylesheets -->
+    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://unpkg.com/purecss@0.6.0/build/pure-min.css">
+    
+
   </head>
   <body>
     <div class='container' id="authorize-div">
@@ -39,6 +44,8 @@
         Sign in to Sheets
       </a>
     </div>
+    <br>
+    <img id='image' src='imgs/DefenseStorm_horz_bk.png' alt='DefenseStorm_Logo'>
     <div class='container' id='root'>
     </div>
   </body>
