--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   </head>
   <body>
-    <img id='image' src='imgs/DefenseStorm_horz_bk.png' alt='DefenseStorm_Logo'>
+    <img id='logo' src='imgs/DefenseStorm_horz_bk.png' alt='DefenseStorm_Logo'>
     <div class='container' id="authorize-div">
     </div>
     <br>
