Added calendar fields, but date searching/adding currently not working (see comments)

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class='container' id="authorize-div">
     </div>
     <br>
-    <div class='container' id='root'>
+    <div class='container datepicker-container' id='root'>
     </div>
   </body>
 </html>
