--- a/index.html
+++ b/index.html
@@ -40,11 +40,10 @@
 
   </head>
   <body>
-    <img id='logo' src='imgs/DefenseStorm_horz_bk.png' alt='DefenseStorm_Logo'>
     <div class='container' id="authorize-div">
     </div>
     <br>
-    <div class='container datepicker-container' id='root'>
+    <div id='root'>
     </div>
   </body>
 </html>
