--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 
   </head>
   <body>
+    <img id='auth-logo' src='imgs/DefenseStorm_horz_bk.png' alt='DefenseStorm_Logo'>
     <div class='container' id="authorize-div">
     </div>
     <div id='root'>
