--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <!-- Read in jQuery -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js"></script>
 
-
     <!-- Materialize -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.css" />
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.js"></script>
@@ -20,6 +19,9 @@
     <!-- Read in React scripts -->
     <script type="text/javascript" src="https://unpkg.com/react@15/dist/react.js"></script>
     <script type="text/javascript" src="https://unpkg.com/react-dom@15/dist/react-dom.js"></script>
+
+    <!-- A file that provides useful functions -->
+    <script type="text/javascript" src="utilities.js"></script>
 
     <!-- Our script for interacting with the Google authorization and Sheets APIs -->
     <script type="text/javascript" src="sheets.js"></script>
@@ -36,7 +38,6 @@
     <!-- External Stylesheets -->
     <link rel="stylesheet" href="https://unpkg.com/purecss@0.6.0/build/pure-min.css" />
     <link href="css/style.css" rel="stylesheet" type="text/css" />
-
 
   </head>
   <body>
